kubernetes/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: green
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5002
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
