kubernetes/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  selector:
    app: blue
  ports:
  - name: blue
    port: 5001
    targetPort: 5001
  type: NodePort
