kubernetes/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    app: green
  ports:
  - name: green
    port: 5002
    targetPort: 5002
  type: NodePort
