kubernetes/service.yaml
# This Service manifest defines:
# - a load balancer for pods matching label "app: roemer-svc"
# - exposing the application to the public Internet (type:LoadBalancer)
# - routes port 80 of the load balancer to the port 8080 of the Pods.
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: roemer-svc
spec:
  type: LoadBalancer
  selector:
    app: roemer-svc
  ports:
  - name: http
    port: 5000
    targetPort: 5000
